[dingo-expr] fix functions such as locate, substring, repeat, reverse